@@ -36,6 +36,8 @@ Sep 2011
 
   dillo-3.0, the first of the 3.x series is released.
 
+  dillo-3.0.1, a bugfix release for the new 3.x series is out.
+
 
   Jorge.-
   jcid@dillo.org
